# typed_numpy

./: Cargo.toml  README.md  egraph.py  example.py  pyproject.toml  test.py  type_nodes.py  typed_numpy.py
examples/: example.py
python/stile/: __init__.py  numpy.py  specification.py  type.py  verification.py
python/stile/triton/: __init__.py  _core.py
python/typed_numpy/: __init__.py  egraph.py
src/: lib.rs
tests/: test_stile.py  test_typed_numpy.py  test_typed_triton.py
typed_numpy/: __init__.py  egraph.py
