[package]
name = "_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
egglog = "1.0.0"
lazy_static = "1.5.0"
pyo3 = "0.27.0"

[build]
rustflags = ["-A non_snake_case"]
