[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "typed_numpy"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "einops>=0.8.1",
    "numpy>=1.24.4",
    "pytest>=8.3.5",
]

[tool.maturin]
python-source = "python"
module-name = "typed_numpy._rust"
