[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "stile"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "einops>=0.8.1",
    "numpy>=1.24.4",
]

[tool.maturin]
python-source = "python"
module-name = "stile._rust"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
